done View. next step - DI

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -50,6 +50,8 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="7dp"
                 android:textSize="25dp"
                 android:text="@string/of_branches"/>
         </LinearLayout>
@@ -78,6 +80,8 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="7dp"
                 android:textSize="25dp"
                 android:text="@string/of_regions"/>
             </LinearLayout>
