--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent">
 <LinearLayout
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 <TextView
     android:layout_marginTop="15dp"
     android:layout_width="match_parent"
@@ -65,7 +65,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/order_comment"/>
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="400dp"
         android:layout_height="wrap_content"
         android:background="@color/colorOrange"
         android:layout_gravity="center"
