--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<LinearLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -34,75 +37,109 @@
             android:layout_alignParentTop="true"
             android:layout_marginTop="15dp"
 
-            android:textColor="#dd4225"
-            android:textSize="25sp"
-            android:paddingLeft="30dp"
-            android:gravity="center"
+            android:contentDescription="@string/enterprise_name"
+            android:foregroundGravity="center_horizontal"
+            android:gravity="left"
 
+            android:paddingLeft="30dp"
+            android:text="Имя предприятия"
+            android:textSize="18dp"
+            android:textColor="#ffffff"
+            android:visibility="visible"
             tools:text="@string/enterprise_name" />
 
     </RelativeLayout>
 
+<LinearLayout
+   android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@android:drawable/dialog_holo_light_frame"
+    android:layout_gravity="center_horizontal"
+    android:layout_marginLeft="40dp"
+    android:layout_marginRight="40dp"
+    android:layout_marginTop="10dp"
+    >
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
+        android:layout_height="match_parent"
+
         android:background="@drawable/shape_category"
-        android:layout_weight="1">
+        android:orientation="horizontal"
+        android:weightSum="3"
+        android:layout_gravity="center_horizontal">
 
         <ImageView
             android:id="@+id/imagemail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/mail"
-            android:layout_weight="2"
-            android:padding="5dp"/>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:src="@drawable/mail" />
 
         <ImageView
             android:id="@+id/imagesite"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_weight="2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
             android:padding="5dp"
             android:src="@drawable/site" />
 
         <ImageView
             android:id="@+id/imagecall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/call"
-            android:layout_weight="2"
-            android:padding="5dp"/>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:padding="5dp"
+            android:src="@drawable/call" />
 
     </LinearLayout>
+</LinearLayout>
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:layout_weight="4"
         android:text="@string/products"
         android:textColor="#dd4225" />
 
+    <View android:layout_width="fill_parent"
+        android:layout_height="2dip"
+        android:layout_margin="4dp"
+        android:background="#666666" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycle_products"
         android:layout_width="match_parent"
-        android:layout_height="138dp"
+        android:layout_height="wrap_content"
         android:layout_weight="20">
 
     </android.support.v7.widget.RecyclerView>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:drawable/dialog_holo_light_frame"
+        android:layout_gravity="right"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp">
     <Button
         android:id="@+id/buttonAll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
+
+        android:paddingRight="20dp"
+        android:paddingLeft="20dp"
         android:layout_weight="2"
-        android:text="@string/products_list" />
+        android:text="@string/products_list"
+        android:textColor="#ffffff"
+        android:background="@color/colorBlue"/>
+    </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
@@ -110,6 +147,10 @@
         android:layout_weight="4"
         android:text="@string/info"
         android:textColor="#dd4225" />
+    <View android:layout_width="fill_parent"
+        android:layout_height="2dip"
+        android:layout_margin="4dp"
+        android:background="#666666" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -128,6 +169,41 @@
             android:text="@string/adres"
             />
     </LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="4"
+        android:layout_marginTop="15dp"
+        android:text="@string/contacts"
+        android:textColor="#dd4225" />
+    <View android:layout_width="fill_parent"
+        android:layout_height="2dip"
+        android:layout_margin="4dp"
+        android:background="#666666" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/telephon"
+        android:layout_weight="1"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="4"
+        android:layout_marginTop="15dp"
+        android:text="@string/info"
+        android:textColor="#dd4225" />
+    <View android:layout_width="fill_parent"
+        android:layout_height="2dip"
+        android:layout_margin="4dp"
+        android:background="#666666" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/info"
+        android:layout_weight="1"/>
+
+
 
 
 </LinearLayout>
+</ScrollView>
