--- a/app/src/main/res/layout/category_card.xml
+++ b/app/src/main/res/layout/category_card.xml
@@ -3,13 +3,17 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/shape_category"
-    android:layout_marginTop="2dp"
-    android:layout_marginBottom="2dp">
+    android:layout_marginTop="4dp"
+    android:layout_marginBottom="4dp"
+    android:layout_marginLeft="40dp"
+    android:layout_marginRight="40dp">
 <TextView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textSize="20dp"
     android:paddingLeft="30dp"
+    android:paddingTop="2dp"
+    android:paddingBottom="2dp"
     android:text="@string/category"
     android:id="@+id/category_card"
     android:layout_margin="4dp"
