--- a/app/src/main/res/layout/enterprise_card.xml
+++ b/app/src/main/res/layout/enterprise_card.xml
@@ -13,41 +13,75 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="16dp"
             android:background="@drawable/shape"
-            >
+            android:orientation="vertical"
+            android:padding="16dp">
 
             <TextView
                 android:id="@+id/enterprise_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:padding="16dp"
+                android:padding="10dp"
 
                 android:text="@string/enterprise_name"
-                android:textSize="24sp" />
+                android:textColor="@color/colorBlue"
+                android:textSize="27sp" />
 
             <TextView
                 android:id="@+id/description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
+
                 android:text="@string/description" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="124dp"
+            android:layout_marginRight="90dp"
+            android:layout_gravity="right"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/iccity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="0dp"
+                android:padding="3dp"
+                android:src="@drawable/ic_city" />
+
+            <ImageView
+                android:id="@+id/ictelephon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:padding="0dp"
+                android:src="@drawable/ic_tel" />
+
+            <ImageView
+                android:id="@+id/iccategory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:padding="3dp"
+                android:src="@drawable/ic_category" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="124dp"
-            android:orientation="vertical"
-            android:layout_marginRight="10dp">
+            android:layout_marginRight="10dp"
+            android:orientation="vertical">
 
             <TextView
-                android:layout_marginTop="10dp"
                 android:id="@+id/city"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
+                android:layout_marginTop="10dp"
                 android:padding="10dp"
                 android:text="@string/city" />
 
