--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorOrange">#dd4225</color>
+    <color name="colorBlue">#42A5F5</color>
+    <color name="lightGray">#F5F5F5</color>
 </resources>
