--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -8,7 +8,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.biz_3.InfoActivity">
+    tools:context="com.example.biz_3.View.InfoActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -42,7 +42,7 @@
             android:gravity="left"
 
             android:paddingLeft="30dp"
-            android:text="Имя предприятия"
+            android:text="@string/ent_name"
             android:textSize="18dp"
             android:textColor="#ffffff"
             android:visibility="visible"
