--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.biz_3.SearchActivity">
+    tools:context="com.example.biz_3.View.SearchActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,13 +16,7 @@
 
         <EditText
             android:id="@+id/editText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="60dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_weight="2"
-            android:background="@drawable/shape_search" />
+            style="@style/SearchEditText" />
 
         <ImageView
             android:id="@+id/imageView"
