--- a/app/src/main/res/layout/enterprise_card.xml
+++ b/app/src/main/res/layout/enterprise_card.xml
@@ -1,32 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent" android:layout_height="wrap_content"
     android:padding="5dp"
+    android:background="@android:drawable/dialog_holo_light_frame"
     >
 
     <android.support.v7.widget.CardView
         android:id="@+id/cv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/shape">
+        android:layout_height="match_parent"
+        android:background="@drawable/shape"
+        app:layout_constraintTop_toTopOf="parent"
+        >
 
-        <LinearLayout
+        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="@drawable/shape"
-            android:orientation="vertical"
-            android:padding="16dp">
+            android:padding="5dp">
 
             <TextView
                 android:id="@+id/enterprise_name"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
 
+                android:layout_marginEnd="8dp"
+
+                android:layout_marginLeft="3dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="3dp"
+                android:layout_marginTop="18dp"
                 android:padding="10dp"
-
                 android:text="@string/enterprise_name"
                 android:textColor="@color/colorBlue"
-                android:textSize="27sp" />
+                android:textSize="18sp"
+                app:layout_constraintHorizontal_bias="0.568"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/guideline"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/description"
@@ -34,73 +49,125 @@
                 android:layout_height="wrap_content"
 
 
-                android:text="@string/description" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="124dp"
-            android:layout_marginRight="90dp"
-            android:layout_gravity="right"
-            android:orientation="vertical">
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="13dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="13dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/description"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@+id/guideline"
+                app:layout_constraintTop_toBottomOf="@+id/enterprise_name" />
 
             <ImageView
                 android:id="@+id/iccity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="0dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="21dp"
                 android:padding="3dp"
-                android:src="@drawable/ic_city" />
+                android:src="@drawable/ic_city"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toLeftOf="@+id/guideline"
+                app:layout_constraintRight_toRightOf="@+id/ictelephon"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/ictelephon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="42dp"
+                android:layout_height="39dp"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:padding="0dp"
-                android:src="@drawable/ic_tel" />
+                android:src="@drawable/ic_tel"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintLeft_toLeftOf="@+id/guideline"
+                app:layout_constraintRight_toRightOf="@+id/iccategory"
+                app:layout_constraintTop_toBottomOf="@+id/iccity" />
 
             <ImageView
                 android:id="@+id/iccategory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:padding="3dp"
-                android:src="@drawable/ic_category" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="124dp"
-            android:layout_marginRight="10dp"
-            android:orientation="vertical">
+                android:src="@drawable/ic_category"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="@+id/guideline"
+                app:layout_constraintRight_toRightOf="@+id/iccity"
+                app:layout_constraintTop_toBottomOf="@+id/ictelephon"
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/city"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:layout_marginTop="10dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="6dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="6dp"
+                android:layout_marginTop="23dp"
                 android:padding="10dp"
-                android:text="@string/city" />
+                android:text="@string/city"
+                app:layout_constraintHorizontal_bias="0.469"
+                app:layout_constraintLeft_toRightOf="@+id/iccity"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/telephon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="6dp"
                 android:padding="10dp"
-                android:text="@string/telephon" />
+                android:text="@string/telephon"
+                android:textSize="10sp"
+                app:layout_constraintLeft_toRightOf="@+id/ictelephon"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/ictelephon" />
 
             <TextView
                 android:id="@+id/category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="6dp"
                 android:padding="10dp"
-                android:text="@string/category" />
-        </LinearLayout>
+                android:text="@string/category"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintLeft_toRightOf="@+id/iccategory"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/iccategory" />
 
+            <android.support.constraint.Guideline
+                android:id="@+id/guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="181dp"
+                tools:layout_editor_absoluteX="191dp"
+                tools:layout_editor_absoluteY="91dp" />
+        </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
