--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,4 +25,14 @@
         <item name="android:actionBarStyle">@style/CustomActionBarStyle</item>
     </style>
 
+    <style name="SearchEditText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">60dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:layout_marginTop">20dp</item>
+        <item name="android:layout_weight">2</item>
+        <item name="android:background">@drawable/shape_search</item>
+    </style>
+
 </resources>
